# mdwatch

./: .gitignore  .prettierignore  Cargo.toml  README.md  flake.nix
.github/workflows/: cd.yml  rust.yml
scripts/: install.sh  uninstall.sh
src/: args.rs  main.rs  temp.rs  template.rs  utils.rs
static/: client.js  global.css
static/css/: style.css
static/lib/: fontello.css
templates/: home.html  main.html
