[package]
name = "mdwatch"
version = "0.1.18"
edition = "2024"
authors = ["Santosh Shrestha <santoshxshrestha@gmail.com> "]
description = "A simple CLI tool to live-preview Markdown files in your browser."
license = "MIT"
repository = "https://github.com/santoshxshrestha/mdwatch"
homepage = "https://github.com/santoshxshrestha/mdwatch"
documentation = "https://github.com/santoshxshrestha/mdwatch#readme"
readme = "README.md"

[dependencies]
actix-web = "4.11.0"
actix-ws = "0.4.0"
ammonia = "4.1.1"
askama = { version = "0.14.0", features = ["full"] }
clap = { version = "4.5.46", features = ["derive"] }
notify = "8.2.0"
pulldown-cmark = "0.13.0"
rust-embed = { version = "8.11.0", features = ["interpolate-folder-path"] }
serde_json = "1.0.143"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
webbrowser = "1.0.5"
